--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,35 @@
-adium-theme-ubuntu==0.3.4
-astroid==1.6.5
-backports.functools-lru-cache==1.5
-configparser==3.5.0
-cryptography==1.2.3
-duplicity==0.7.6
-ecdsa==0.13
-enum34==1.1.6
-futures==3.2.0
-gyp==0.1
-idna==2.0
-ipaddress==1.0.16
+alembic==1.0.0
+astroid==2.0.4
+blinker==1.4
+click==6.7
+dominate==2.3.1
+Flask==1.0.2
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-Migrate==2.2.1
+Flask-Script==2.0.6
+Flask-SimpleMDE==0.3.0
+Flask-SQLAlchemy==2.3.2
+Flask-Uploads==0.2.1
+Flask-WTF==0.14.2
+gunicorn==19.9.0
 isort==4.3.4
+itsdangerous==0.24
+Jinja2==2.10
 lazy-object-proxy==1.3.1
-lockfile==0.12.2
+Mako==1.0.7
+markdown2==2.3.5
+MarkupSafe==1.0
 mccabe==0.6.1
-ndg-httpsclient==0.4.0
-paramiko==1.16.0
-proteus==3.8.1
-pyasn1==0.1.9
-pycrypto==2.6.1
-pygobject==3.20.0
-pylint==1.9.3
-pyOpenSSL==0.15.1
-python-apt==1.1.0b1+ubuntu0.16.4.2
-python-dateutil==2.4.2
-pywatchman==1.3.0
-simplejson==3.8.1
-singledispatch==3.4.0.3
+psycopg2==2.7.5
+pylint==2.1.1
+python-dateutil==2.7.3
+python-editor==1.0.3
 six==1.11.0
-unity-lens-photos==1.0
-urllib3==1.13.1
+SQLAlchemy==1.2.11
+typed-ast==1.1.0
+visitor==0.1.3
+Werkzeug==0.14.1
 wrapt==1.10.11
+WTForms==2.2.1
